Added a homepage to package.json and corrected the title in index.html

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "tirelire",
   "version": "0.1.0",
+  "homepage": "http://2d2h.net/helios/tirelire",
   "private": true,
   "dependencies": {
     "node-sass": "^4.12.0",
